cmake_minimum_required(VERSION 3.13)
project(Corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(libft/Headers)
include_directories(VM)

add_executable(Corewar
        libft/Headers/ft_printf.h
        libft/Headers/get_next_line.h
        libft/Headers/libft.h
        libft/Srcs/ft_printf_functions/Char/char.c
        libft/Srcs/ft_printf_functions/DI/check_limits_integer.c
        libft/Srcs/ft_printf_functions/DI/ft_di.c
        libft/Srcs/ft_printf_functions/DI/ft_itoa_int_binary.c
        libft/Srcs/ft_printf_functions/DI/ft_itoa_integer.c
        libft/Srcs/ft_printf_functions/DI/ft_put_indents_integer.c
        libft/Srcs/ft_printf_functions/DI/ft_put_precision_integer.c
        libft/Srcs/ft_printf_functions/DI/ft_put_sign_integer.c
        libft/Srcs/ft_printf_functions/DI/ft_put_space_integer.c
        libft/Srcs/ft_printf_functions/Float/copy_float.c
        libft/Srcs/ft_printf_functions/Float/floats.c
        libft/Srcs/ft_printf_functions/Float/get_ipart.c
        libft/Srcs/ft_printf_functions/Float/indents_flo.c
        libft/Srcs/ft_printf_functions/Float/ipart_to_str.c
        libft/Srcs/ft_printf_functions/Float/long_arithmetic_divison.c
        libft/Srcs/ft_printf_functions/Float/long_arithmetic_operations_for_double.c
        libft/Srcs/ft_printf_functions/Float/long_arithmetic_operations_for_longdouble.c
        libft/Srcs/ft_printf_functions/Float/long_double.c
        libft/Srcs/ft_printf_functions/Float/malloc_protection_funk.c
        libft/Srcs/ft_printf_functions/Float/num_to_arr.c
        libft/Srcs/ft_printf_functions/Float/other_case_double.c
        libft/Srcs/ft_printf_functions/Float/round_ipart.c
        libft/Srcs/ft_printf_functions/Float/round_up_functions.c
        libft/Srcs/ft_printf_functions/Float/set_plus_flo.c
        libft/Srcs/ft_printf_functions/Float/set_precision_flo.c
        libft/Srcs/ft_printf_functions/Float/set_space_flo.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/ft_parsing.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/ft_str_after.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/put_data.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/set_flags.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/set_indents.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/set_modificators.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/set_precision.c
        libft/Srcs/ft_printf_functions/HighestFunctions/Parsing/string_before.c
        libft/Srcs/ft_printf_functions/HighestFunctions/assembler.c
        libft/Srcs/ft_printf_functions/HighestFunctions/char_bin_search.c
        libft/Srcs/ft_printf_functions/HighestFunctions/dynamic_buffer.c
        libft/Srcs/ft_printf_functions/HighestFunctions/ft_fprintf.c
        libft/Srcs/ft_printf_functions/HighestFunctions/ft_printf.c
        libft/Srcs/ft_printf_functions/HighestFunctions/ft_put_color.c
        libft/Srcs/ft_printf_functions/HighestFunctions/ft_put_str.c
        libft/Srcs/ft_printf_functions/HighestFunctions/ft_set_to_null.c
        libft/Srcs/ft_printf_functions/HighestFunctions/ft_strrev.c
        libft/Srcs/ft_printf_functions/HighestFunctions/num_len.c
        libft/Srcs/ft_printf_functions/OxX/fill_precision.c
        libft/Srcs/ft_printf_functions/OxX/fill_zero_ox.c
        libft/Srcs/ft_printf_functions/OxX/ft_caps.c
        libft/Srcs/ft_printf_functions/OxX/grid_o.c
        libft/Srcs/ft_printf_functions/OxX/grid_x.c
        libft/Srcs/ft_printf_functions/OxX/indents_ox.c
        libft/Srcs/ft_printf_functions/OxX/itoa_base.c
        libft/Srcs/ft_printf_functions/OxX/itoa_u.c
        libft/Srcs/ft_printf_functions/OxX/ox.c
        libft/Srcs/ft_printf_functions/Pointer/ft_itoa_pointer.c
        libft/Srcs/ft_printf_functions/Pointer/ft_put_grid_pointer.c
        libft/Srcs/ft_printf_functions/Pointer/ft_put_indents_pointer.c
        libft/Srcs/ft_printf_functions/Pointer/ft_put_precision_pointer.c
        libft/Srcs/ft_printf_functions/Pointer/pointer.c
        libft/Srcs/ft_printf_functions/String/string.c
        libft/Srcs/ft_printf_functions/Unsigned/check_limits_unsigned_integer.c
        libft/Srcs/ft_printf_functions/Unsigned/ft_itoa_u_bin.c
        libft/Srcs/ft_printf_functions/Unsigned/ft_itoa_unsigned.c
        libft/Srcs/ft_printf_functions/Unsigned/ft_put_indents_unsigned.c
        libft/Srcs/ft_printf_functions/Unsigned/ft_put_precision_unsigned.c
        libft/Srcs/ft_printf_functions/Unsigned/ft_unsigned.c
        libft/Srcs/ft_printf_functions/Unsigned/num_len_unsigned.c
        libft/Srcs/get_next_line/get_next_line.c
        libft/Srcs/main_functions/ft_abs.c
        libft/Srcs/main_functions/ft_atoi.c
        libft/Srcs/main_functions/ft_bzero.c
        libft/Srcs/main_functions/ft_count_amount_digits.c
        libft/Srcs/main_functions/ft_isalnum.c
        libft/Srcs/main_functions/ft_isalpha.c
        libft/Srcs/main_functions/ft_isascii.c
        libft/Srcs/main_functions/ft_isdigit.c
        libft/Srcs/main_functions/ft_isprint.c
        libft/Srcs/main_functions/ft_itoa.c
        libft/Srcs/main_functions/ft_lstadd.c
        libft/Srcs/main_functions/ft_lstdel.c
        libft/Srcs/main_functions/ft_lstdelone.c
        libft/Srcs/main_functions/ft_lstiter.c
        libft/Srcs/main_functions/ft_lstmap.c
        libft/Srcs/main_functions/ft_lstnew.c
        libft/Srcs/main_functions/ft_mascut.c
        libft/Srcs/main_functions/ft_memalloc.c
        libft/Srcs/main_functions/ft_memccpy.c
        libft/Srcs/main_functions/ft_memchr.c
        libft/Srcs/main_functions/ft_memcmp.c
        libft/Srcs/main_functions/ft_memcpy.c
        libft/Srcs/main_functions/ft_memdel.c
        libft/Srcs/main_functions/ft_memmove.c
        libft/Srcs/main_functions/ft_memset.c
        libft/Srcs/main_functions/ft_pow.c
        libft/Srcs/main_functions/ft_putchar.c
        libft/Srcs/main_functions/ft_putchar_fd.c
        libft/Srcs/main_functions/ft_putendl.c
        libft/Srcs/main_functions/ft_putendl_fd.c
        libft/Srcs/main_functions/ft_putnbr.c
        libft/Srcs/main_functions/ft_putnbr_fd.c
        libft/Srcs/main_functions/ft_putstr.c
        libft/Srcs/main_functions/ft_putstr_fd.c
        libft/Srcs/main_functions/ft_realloc.c
        libft/Srcs/main_functions/ft_strcat.c
        libft/Srcs/main_functions/ft_strchr.c
        libft/Srcs/main_functions/ft_strclr.c
        libft/Srcs/main_functions/ft_strcmp.c
        libft/Srcs/main_functions/ft_strcpy.c
        libft/Srcs/main_functions/ft_strdel.c
        libft/Srcs/main_functions/ft_strdup.c
        libft/Srcs/main_functions/ft_strequ.c
        libft/Srcs/main_functions/ft_strfix.c
        libft/Srcs/main_functions/ft_striter.c
        libft/Srcs/main_functions/ft_striteri.c
        libft/Srcs/main_functions/ft_strjoin.c
        libft/Srcs/main_functions/ft_strjoin_n.c
        libft/Srcs/main_functions/ft_strlcat.c
        libft/Srcs/main_functions/ft_strlen.c
        libft/Srcs/main_functions/ft_strmap.c
        libft/Srcs/main_functions/ft_strmapi.c
        libft/Srcs/main_functions/ft_strncat.c
        libft/Srcs/main_functions/ft_strncmp.c
        libft/Srcs/main_functions/ft_strncpy.c
        libft/Srcs/main_functions/ft_strnequ.c
        libft/Srcs/main_functions/ft_strnew.c
        libft/Srcs/main_functions/ft_strnstr.c
        libft/Srcs/main_functions/ft_strrchr.c
        libft/Srcs/main_functions/ft_strsplit.c
        libft/Srcs/main_functions/ft_strstr.c
        libft/Srcs/main_functions/ft_strsub.c
        libft/Srcs/main_functions/ft_strtrim.c
        libft/Srcs/main_functions/ft_tolower.c
        libft/Srcs/main_functions/ft_toupper.c
        VM/op.h
        VM/print_hex_data.c
        VM/main.c
        VM/virtual_machine.c
        VM/virtual_header.h)
